# estrutura_projetos

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: functions.py  main.py  model.py
src/app/: functions.py  main.py
src/connections/: database.py
src/pipelines/: extract.py
src/test/: test_products.py
