[tool.poetry]
name = "estrutura-projetos"
version = "0.1.0"
description = ""
authors = ["Douglas Poso <douglas.poso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
