[tool.poetry]
name = "estrutura-projetos"
version = "0.1.0"
description = ""
authors = ["Douglas Poso <douglas.poso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pytest = "^8.3.2"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
